# nlp-data-superglue

./: CHANGELOG.md  README.md  nlp-data-superglue.cabal
src/NLP/Data/SuperGLUE/: CB.hs  RTE.hs  ReCoRD.hs  WSC.hs
