name:                nlp-data-superglue
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/nlp-data-superglue
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           2023 Marco Zocca
category:            NLP Data
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     NLP.Data.SuperGLUE.RTE
                       NLP.Data.SuperGLUE.CB
                       NLP.Data.SuperGLUE.WSC
                       NLP.Data.SuperGLUE.ReCoRD
  build-depends:       base >= 4.7 && < 5
                     , aeson
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

-- test-suite spec
--   default-language:    Haskell2010
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   other-modules:       LibSpec
--   build-depends:       base
--                      , nlp-data-superglue
--                      , hspec
--                      , QuickCheck
--   ghc-options:         -Wall
--                        -Wcompat
--                        -Widentities
--                        -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wmissing-export-lists
--                        -Wmissing-home-modules
--                        -Wpartial-fields
--                        -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/ocramz/nlp-data-superglue
